--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "filemanager-webpack-plugin": "^2.0.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.9.0",
